[package]
name = "tsp-gpt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP library
hyper = { version = "^0.14", features = ["full"] }

# HTTPS support
hyper-tls = "^0.5"

# Async support
tokio = { version = "^1", features = ["full"] }

# JSON Serialization/Deserialization support
serde = "^1"
serde_derive = "^1"
serde_json = "^1"

# UI element for loading feedback
spinners = "^4"